--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -27,16 +27,40 @@
 
         <TextView
             android:id="@+id/comment_username"
+            style="@style/TitleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="20dp"
             android:text="@{comment.username}"
             app:layout_constraintStart_toEndOf="@id/comment_profile"
             app:layout_constraintTop_toTopOf="@id/comment_profile"
             tools:text="Faruk Maulana" />
 
+        <ImageView
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginStart="8dp"
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_verified_circle"
+            app:isShownIfExpert="@{comment.type}"
+            app:layout_constraintBottom_toBottomOf="@id/comment_username"
+            app:layout_constraintStart_toEndOf="@id/comment_username"
+            app:layout_constraintTop_toTopOf="@id/comment_username" />
+
+        <TextView
+            android:id="@+id/comment_createdAt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_regular"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@id/comment_profile"
+            app:layout_constraintStart_toStartOf="@id/comment_username"
+            app:prettyDate="@{comment.createdAt}"
+            tools:text="9 minutes ago" />
+
         <TextView
             android:id="@+id/comment_text"
+            style="@style/BodyMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
