--- a/app/src/main/res/layout/fragment_submission.xml
+++ b/app/src/main/res/layout/fragment_submission.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -31,7 +30,7 @@
                 app:title="" />
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
@@ -46,62 +45,72 @@
 
 
                 <TextView
-                    style="@style/TextAppearance.Material3.HeadlineMedium"
+                    style="@style/DisplaySmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Submission" />
+                    android:text="@string/submission_display" />
 
                 <TextView
+                    style="@style/LabelLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="Tell your experience here" />
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/hint_experience" />
 
 
-                <EditText
-                    android:id="@+id/experience_txt"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="?attr/textInputFilledStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="#F0F0F0"
-                    android:gravity="top"
-                    android:inputType="textMultiLine"
-                    android:maxLines="5"
-                    android:overScrollMode="always"
-                    android:padding="10dp"
-                    android:text="@={viewModel.experience}"
+                    android:layout_height="wrap_content"
                     android:scrollbars="vertical"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="dsfasdfsadfljlj" />
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="200"
+                    app:hintEnabled="false">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:gravity="top"
+                        android:inputType="textMultiLine"
+                        android:paddingTop="12dp"
+                        android:text="@={viewModel.experience}" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
 
                 <TextView
+                    style="@style/LabelLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="Upload your document" />
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/hint_document" />
 
                 <ImageView
                     imageUrl="@{viewModel.cdn}"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
-                    android:background="#F0F0F0" />
+                    android:background="#F0F0F0"
+                    android:importantForAccessibility="no" />
 
                 <Button
                     android:id="@+id/btn_file_upload"
                     style="@style/Widget.Material3.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Choose file" />
+                    android:text="@string/hint_file" />
 
                 <Button
                     android:id="@+id/btn_send_submission"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:text="Send" />
+                    android:text="@string/submission_btn" />
 
             </LinearLayout>
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
