--- a/app/src/main/res/layout/fragment_wall_detail.xml
+++ b/app/src/main/res/layout/fragment_wall_detail.xml
@@ -63,8 +63,8 @@
                     <com.google.android.material.imageview.ShapeableImageView
                         android:id="@+id/profile"
                         profileUrl="@{viewModel.wallData[wallIndex].picture}"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:shapeAppearance="@style/CircleImageView" />
@@ -72,9 +72,10 @@
 
                     <TextView
                         android:id="@+id/name"
+                        style="@style/TitleSmall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:text="@{viewModel.wallData[wallIndex].username}"
                         app:layout_constraintStart_toEndOf="@id/profile"
                         app:layout_constraintTop_toTopOf="@id/profile"
@@ -84,6 +85,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="13sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="@id/name"
                         app:prettyDate="@{viewModel.wallData[wallIndex].createdAt}"
@@ -91,6 +93,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
+                    style="@style/TitleMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -100,6 +103,7 @@
                     tools:text="Lorem Ipsum" />
 
                 <TextView
+                    style="@style/BodyMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -172,7 +176,7 @@
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:contentDescription="Send comment"
+                        android:contentDescription="@string/send_comment"
                         android:src="@drawable/ic_send"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
