--- a/app/src/main/res/layout/material_list_item_two_line.xml
+++ b/app/src/main/res/layout/material_list_item_two_line.xml
@@ -13,15 +13,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:importantForAccessibility="no"
         android:padding="16dp"
         tools:src="@drawable/ic_send" />
 
     <TextView
         android:id="@+id/mtrl_list_item_text"
+        style="@style/BodyLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/mtrl_list_item_icon"
         android:maxLines="1"
+        android:paddingStart="0dp"
         android:paddingTop="16dp"
         android:paddingEnd="16dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
@@ -29,16 +32,18 @@
 
     <TextView
         android:id="@+id/mtrl_list_item_secondary_text"
+        style="@style/BodyMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/mtrl_list_item_text"
         android:layout_gravity="center_vertical"
         android:layout_toEndOf="@id/mtrl_list_item_icon"
         android:maxLines="2"
+        android:paddingStart="0dp"
         android:paddingEnd="16dp"
         android:paddingBottom="16dp"
         android:textAppearance="?attr/textAppearanceBody2"
-        android:textColor="@color/mtrl_list_item_tint"
+        android:textColor="#595959"
         tools:text="Configuration for your device lol" />
 
 </RelativeLayout>
