--- a/app/src/main/res/layout/wall_item.xml
+++ b/app/src/main/res/layout/wall_item.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <data>
 
         <variable
@@ -27,19 +26,20 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/profile_picture"
-                android:layout_width="50dp"
-                app:shapeAppearance="@style/CircleImageView"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:profileUrl="@{wall.picture}"
+                app:shapeAppearance="@style/CircleImageView"
                 tools:src="@drawable/userplaceholder" />
 
             <TextView
                 android:id="@+id/username"
+                style="@style/TitleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
+                android:layout_marginStart="20dp"
                 android:text="@{wall.username}"
                 app:layout_constraintStart_toEndOf="@id/profile_picture"
                 app:layout_constraintTop_toTopOf="@id/profile_picture"
@@ -47,18 +47,21 @@
 
             <TextView
                 android:id="@+id/time"
+                android:textSize="13sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:prettyDate="@{wall.createdAt}"
+                android:fontFamily="@font/inter_regular"
                 app:layout_constraintBottom_toBottomOf="@id/profile_picture"
                 app:layout_constraintStart_toStartOf="@id/username"
+                app:prettyDate="@{wall.createdAt}"
                 tools:text="30 minutes ago" />
 
             <TextView
                 android:id="@+id/title"
+                style="@style/TitleMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:text="@{wall.title}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_picture"
@@ -66,6 +69,7 @@
 
             <TextView
                 android:id="@+id/detail"
+                style="@style/BodyMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -73,6 +77,27 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title"
                 tools:text="Lorem ipsum dolor sit amet" />
+
+            <ImageView
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_marginEnd="5dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_comment"
+                app:layout_constraintBottom_toBottomOf="@id/wall_comment_count"
+                app:layout_constraintEnd_toStartOf="@id/wall_comment_count"
+                app:layout_constraintTop_toTopOf="@id/wall_comment_count" />
+
+            <TextView
+                android:id="@+id/wall_comment_count"
+                style="@style/LabelLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{wall.commentCount}"
+                app:layout_constraintTop_toBottomOf="@id/detail"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
