--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,5 +53,7 @@
     <color name="md_theme_dark_primaryInverse">#6750A4</color>
     <color name="seed">#6750A4</color>
     <color name="error">#B3261E</color>
-
+    <color name="pending">#4E8098</color>
+    <color name="published">#07C86B</color>
+    <color name="rejected">#FA0000</color>
 </resources>
